frontend/tests/errors/ER-019/std_math_array_lift_side_effect_arg/test.vx
// @rfc: docs/vexel-rfc.md#name-resolution--modules
// @desc: Bundled std::math array lifting rejects side-effecting arguments because lowering expands to repeated indexed scalar calls without temporary materialization. | std::math array lifting requires side-effect-free arguments

::std::math;

&mk() -> #f64[2] {
  [1.0, 4.0]
}

&^main() -> #i32 {
  ys:#f64[2] = std::math::sqrt(mk());
  0
}
